Chore: modify z-index for bug on disappear of toast

--- a/resources/css/globe.scss
+++ b/resources/css/globe.scss
@@ -42,7 +42,7 @@ header {
     display: flex;
     justify-content: center;
     align-content: center;
-    z-index: 10000;
+    z-index: 9999;
     figure {
         width: 60px;
         img {
